--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
           <h3>About Me</h3></div>
         <div id="intro_bg" class="intro_bg_config">
           <blockquote class="blockquote text-center">
-            <p class="mb-0">During the college, I learned to code thought my major course. With the knowledge I get from the class, I can use it to solve the problem by coding and debugging skill. I am interested in learning new technology and knowledge. Recently, I
-              am taking the Deep Learning Specialization from Coursera.</p>
+            <p class="mb-0">Will change, waiting for update.</p>
             <footer class="blockquote-footer">XingSong Lin <cite title="Source Title">in B.S. CS from QC.</cite></footer>
           </blockquote>
         </div>
